# Research_Analyser

./: .env.example  .gitignore  CLAUDE.md  README.md  ResearchAnalyser.spec  SPEC.md  app.py  config.yaml  monkeyocr.py  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
.streamlit/: config.toml
docs/: architecture.md  configuration.md  key_points_and_equations.md
packaging/: icon.icns  linux_launcher.py  macos_launcher.py  make_icon.py  windows_launcher.py
packaging/beautiful_mermaid/: package-lock.json  package.json  render.bundle.mjs  render.mjs
research-analyser-vscode/: .eslintrc.json  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.config.js  package-lock.json  package.json  tsconfig.json
research-analyser-vscode/src/: extension.ts
research-analyser-vscode/tests/: runTests.ts
research_analyser/: __init__.py  __main__.py  analyser.py  api.py  comparison.py  config.py  diagram_generator.py  exceptions.py  input_handler.py  models.py  ocr_engine.py  report_generator.py  reviewer.py  storm_reporter.py  tts_engine.py
scripts/: build_linux_package.sh  build_macos_dmg.sh  build_windows_exe.ps1  git_push.sh  paperbanana_from_text.py  paperbanana_retry_validation.py  paperbanana_smoke_test.py
specs/: vscode_extension.md
specs/001-storm-report/: plan.md  spec.md  tasks.md
specs/002-vscode-extension/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  vsc.md
tests/: test_input_handler.py  test_models.py  test_ocr_engine.py  test_report_generator.py  test_reviewer.py  test_storm_reporter.py
(+27 files in other folders)
