[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-analyser"
version = "0.1.0"
description = "AI-powered research paper analysis tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "aiofiles>=23.0",
    "httpx>=0.25",
    "PyMuPDF>=1.23",
    "click>=8.1",
    "rich>=13.0",
    "tqdm>=4.65",
    "Pillow>=10.0",
]

[project.optional-dependencies]
ocr = ["monkeyocr"]
diagrams = ["paperbanana"]
review = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.1",
    "scikit-learn>=1.3",
    "tavily-python>=0.3",
]
web = ["streamlit>=1.30"]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",
]
all = [
    "research-analyser[ocr,diagrams,review,web,api]",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[project.scripts]
research-analyser = "research_analyser.__main__:cli"

[tool.setuptools.packages.find]
include = ["research_analyser*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
